--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "ejs": "^2.5.7",
     "express": "^4.16.3",
     "express-session": "^1.15.6",
+    "jquery": "^3.3.1",
     "method-override": "^2.3.10",
     "moment": "^2.22.1",
     "mongoose": "^5.0.12",
